syntax ="proto3";

package go.micro.service.user;


service User {
    //注册
    rpc Register(UserRegisterReq) returns (UserRegisterAck){}
    //登录
    rpc Login(UserLoginReq) returns (UserLoginAck){}
    //获取信息
    rpc GetUserInfo(UserInfoReq) returns (UserInfoAck){}
}

message UserRegisterReq {
    string user_name =1;
    string first_name=2;
    string pwd =3;
}

message UserRegisterAck {
    string message =1;
}

message UserLoginReq {
    string user_name =1;
    string pwd =2;
}

message UserLoginAck{
    bool is_success =1;
}

message UserInfoReq {
    string user_name=1;
}

message UserInfoAck {
    int64 id=1;
    string user_name =2;
    string first_name=3;
}